# malex

./: README.MD
OtpStealer/app/: build.gradle
OtpStealer/app/src/androidTest/java/com/example/otpstealer/: ExampleInstrumentedTest.kt
OtpStealer/app/src/main/: AndroidManifest.xml
OtpStealer/app/src/main/assets/: classes.dex
OtpStealer/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
OtpStealer/app/src/main/java/com/example/otpstealer/: HttpHelper.kt  MainActivity.kt  MyNotificationListenerService.kt
OtpStealer/app/src/main/java/com/example/otpstealer/ui/theme/: Color.kt  Theme.kt  Type.kt
OtpStealer/app/src/main/res/values/: strings.xml  themes.xml
OtpStealer/app/src/test/java/com/example/otpstealer/: ExampleUnitTest.kt
java-dev/: MyClass.java
